# ghin

./: Cargo.toml
migrations/2026-01-08-080427-0000_create_config/: up.sql
migrations/2026-01-08-080642-0000_create_repos/: up.sql
src/: main.rs  package.rs
src/commands/: add.rs  config.rs  mod.rs
src/github/: client.rs  mod.rs
src/store/: mod.rs  models.rs  schema.rs
