[package]
name = "ghin"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["env", "derive"] }
diesel = { version = "2.3.5", features = ["chrono", "serde_json", "sqlite"] }
diesel-async = { version = "0.7.4", features = ["bb8", "sqlite"] }
indicatif = { version = "0.18.3", features = ["tokio"] }
inquire = { version = "0.9.1", features = ["chrono", "console"] }
reqwest = { version = "0.13.1", default-features = false, features = ["charset", "http2", "system-proxy", "json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.49.0", features = ["full"] }
