[package]
name = "ghin"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["env", "derive"] }
colored = "3.0.0"
diesel = { version = "2.3.5", features = ["chrono", "serde_json", "sqlite"] }
diesel_migrations = { version = "2.3.1", features = ["sqlite"] }
indicatif = { version = "0.18.3", features = ["tokio"] }
inquire = { version = "0.9.1", features = ["chrono", "console"] }
reqwest = { version = "0.13.1", default-features = false, features = ["charset", "http2", "system-proxy", "json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.49.0", features = ["full"] }

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
panic = "abort"
strip = "symbols"
